--- a/AskCody/WebContent/css/askcody_about.css
+++ b/AskCody/WebContent/css/askcody_about.css
@@ -88,15 +88,31 @@ body {
 	font-weight: bold;
 }
 
-.newul li {
-	padding: 20px;
-	display: block;
-}
-
 .menu{
 	font-size: 20px;
 	font-weight: bold;
 	letter-spacing: 2px;
+}
+
+#title {
+	text-align: center;
+	font-family: 'Oxygen', sans-serif;
+	color: rgb(035, 058, 79);
+	letter-spacing: 1px;
+	margin: 10px 10px 0 10px;
+}
+
+.center {
+	text-align: center;
+}
+
+.mainlogo {
+	width: 300px;
+}
+
+.introduce {
+	text-align: justify;
+	margin: 0 50px;
 }
 
 hr {
@@ -123,7 +139,7 @@ hr {
 	font-size: 11px;
 	width: 100%;
 	padding: 13px;
-	margin: 0 0 0 0;
+	margin: 0;
 	display: block;
 }
 
